--- a/users/templates/users/photo_maket.html
+++ b/users/templates/users/photo_maket.html
@@ -145,7 +145,7 @@ h1 {
 }
 
 .alert {
-    padding: 15px;
+    padding: 15 px;
     border-radius: 10px;
     margin-bottom: 10px;
     text-align: left;
@@ -156,7 +156,7 @@ h1 {
 .alert-info {
     background-color: rgba(23, 162, 184, 0.2);
     border: 2px solid #17a2b8;
-    color: #17a2b8;
+    color: white;
 }
 
 .alert-warning {
@@ -358,7 +358,7 @@ h1 {
     }
 
     .history-button {
-        width: 100%;
+        width: 60%;
         justify-content: center;
     }
 }
