--- a/users/templates/users/task_history.html
+++ b/users/templates/users/task_history.html
@@ -88,6 +88,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-direction: column;
     margin-bottom: 20px;
 }
 
