--- a/users/templates/users/confirm.html
+++ b/users/templates/users/confirm.html
@@ -13,7 +13,7 @@
         {% if messages %}
         <div class="messages">
             {% for message in messages %}
-            <div class="alert alert-{{ message.tags }}">
+            <div class="alert alert-{{ message.tags }} Аккаунт будет удалён, если его не подтвердить">
                 {{ message }}
             </div>
             {% endfor %}
@@ -31,47 +31,46 @@
     </div>
 
 <style>
+/* Общие стили для всего документа */
 html, body {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     font-family: 'Montserrat', sans-serif;
-    text-decoration: none;
     background-image: url('/static/img/photo_2025-01-24_01-36-25.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
+    height: 100vh;
+    margin: 0;
+    color: white;
     overflow: hidden;
 }
 
+/* Стили для контейнера */
 .container {
-    width: 85%;
-    max-width: 400px;
-    background: rgba(0, 0, 0, 0.6);
-    border-radius: 10px;
-    text-align: center;
-    color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100%;
     padding: 20px;
 }
 
+/* Стили для заголовка */
 h1 {
-    padding: 5px;
-    margin-bottom: 20px;
+    text-align: center;
+    margin-bottom: 30px;
+    font-weight: 500;
 }
 
-.form-group {
+/* Стили для формы */
+form {
     width: 100%;
-    margin-bottom: 15px;
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.container input[type="text"] {
+/* Стили для полей ввода */
+input[type="text"] {
     width: 90%;
     padding: 15px;
     border: none;
@@ -82,13 +81,7 @@ h1 {
     margin-bottom: 10px;
 }
 
-form {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
+/* Стили для сообщений */
 .messages {
     width: 100%;
     margin-bottom: 20px;
@@ -109,6 +102,7 @@ form {
     background-color: rgba(0, 255, 0, 0.2);
 }
 
+/* Стили для кнопок */
 button {
     background-color: white;
     border: 1px solid white;
@@ -135,13 +129,15 @@ button:hover {
     background-color: white;
     color: black;
     border: none;
-    width: 20%;
+    width: 50%;
     padding: 10px;
     border-radius: 30px;
     font-size: 14px;
     cursor: pointer;
     text-decoration: none;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .btn:hover {
