--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -270,7 +270,7 @@ html, body {
         font-size: 14px;
     }
 
-</style>  <!-- Закрываем CSS -->
+</style>
 
 <script>
 document.getElementById('registrationForm').addEventListener('submit', function(e) {
