--- a/users/templates/users/photo_maket.html
+++ b/users/templates/users/photo_maket.html
@@ -94,7 +94,7 @@ body {
 main {
     height: 100vh;
     font-size: 10px;
-    overflow-y: auto;
+    overflow-x: auto;
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
@@ -321,7 +321,7 @@ h1 {
 
 .no-photo-message {
     text-align: center;
-    color: #6c757d;
+    color: red;
     font-size: 18px;
     margin-top: 50px;
 }
