--- a/manager2/templates/manager2/task_monitoring.html
+++ b/manager2/templates/manager2/task_monitoring.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="monitoring-container">
     <div class="header-container">
-        <a href="{% url 'task_list' %}" class="back-button">
+        <a href="{% url 'home_man' %}" class="back-button">
             <i class="fas fa-arrow-left"></i>
             Назад
         </a>
